# ICEmu

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  setup-lib.sh  source-lib.sh
arm-code/: CMakeLists.txt  build-arm.sh  build-clang.sh  build-gcc.sh  cmake-clang.sh  cmake-gcc.sh
arm-code/apps/: CMakeLists.txt
arm-code/apps/call-printf/: CMakeLists.txt  call-printf.c  printf.c
arm-code/apps/call-simple/: CMakeLists.txt  call-simple.c
arm-code/apps/coremark/: CMakeLists.txt
arm-code/apps/coremark/icemu/: core_portme.c  core_portme.h  printf.c  printfmap.c
arm-code/apps/loop-and-return/: CMakeLists.txt
arm-code/apps/loop-forever/: CMakeLists.txt  loop-forever.c
arm-code/config-m4/: linkerscript.ld  startup_gcc.c  toolchain-clang.cmake
arm-test-code/apps/loop-and-return/: CMakeLists.txt  loop-and-return.c
arm-test-code/config-m4/: toolchain.cmake
cfg/: example_cfg.json
concept/: HookCodePlugin.cpp  build.sh  hooks.cpp
concept/backup/old/: hooks.cpp  hooks.h
concept/hooks/: Hook.h  HookCode.h  HookManager.h  HookMemory.h  Hooks.h  RegisterHook.h  hookcode.h  hookmanager.h  hookmemory.h  hooks.h  registerhook.h
concept/icemu/: types.h
example/cfg/: cfg_armv7.json  cfg_riscv.json  example_cfg.json
example/plugin/: CMakeLists.txt
example/plugin/hook_all_events_plugin/: CMakeLists.txt  HookAllEvents.cpp
example/plugin/hook_argument_plugin/: CMakeLists.txt  HookArgument.cpp
example/plugin/hook_code_plugin/: CMakeLists.txt  HookCode.cpp  HookCodePlugin.cpp  README.md  build.sh
example/plugin/hook_memory_plugin/: CMakeLists.txt  HookMemory.cpp
example/plugin/mock_function_plugin/: CMakeLists.txt  MockFunction.cpp
include/icemu/: ArgParse.h  Config.h  MemoryDump.h
include/icemu/emu/: Arch.h  Architecture.h  ArchitectureArmv7.h  ArchitectureRiscv32.h  ArchitectureRiscv64.h  Emulator.h  Function.h  FunctionArgs.h  Memory.h  Registers.h  Symbols.h  types.h
include/icemu/hooks/: Hook.h  HookAllEvents.h  HookCode.h  HookFunction.h  HookManager.h  HookMemory.h  Hooks.h  RegisterHook.h
include/icemu/hooks/builtin/: BuiltinHooks.h  HookControlRegisters.h  HookInstructionCount.h  HookStopEmulation.h
include/icemu/plugin/: PluginArguments.h  PluginManager.h
include/icemu/util/: ElapsedTime.h
plugins/: CMakeLists.txt
plugins/armv7_stop_emulation_plugin/: Armv7StopEmulation.cpp  CMakeLists.txt
plugins/call_count_plugin/: CallCount.cpp
plugins/common/: PluginArgumentParsing.h  Riscv32E21Pipeline.hpp
plugins/display_instructions_plugin/: DisplayInstructions.cpp
plugins/display_memory_plugin/: CMakeLists.txt  DisplayMemory.cpp
plugins/legacy/: HookControlRegisters.h  README.md
plugins/legacy/call_count_plugin/: CMakeLists.txt
plugins/legacy/call_frequency_plugin/: CallFrequency.cpp
plugins/legacy/callsite_count_plugin/: CMakeLists.txt
plugins/legacy/checkpoint_verification_plugin/: CheckpointVerification.cpp
plugins/legacy/common/: PluginArgumentParsing.h
plugins/legacy/cycle_count_plugin/: CMakeLists.txt
plugins/legacy/final_value_plugin/: FinalValue.cpp
plugins/legacy/idempotency_statistics_plugin/: IdempotencyStatistics.cpp
plugins/legacy/instruction_profiling_plugin/: CMakeLists.txt  InstructionProfiling.cpp
plugins/legacy/intermittency_plugin/: CMakeLists.txt
plugins/legacy/memory_access_ratio_plugin/: MemoryAccessRatio.cpp
plugins/legacy/powertrace_plugin/: Powertrace.cpp
plugins/legacy/step_instructions_plugin/: CMakeLists.txt  StepInstructions.cpp
plugins/legacy/track_variable_plugin/: CMakeLists.txt  TrackVariable.cpp
plugins/mock_clockfunc_plugin/: CMakeLists.txt  MockClockfunc.cpp
plugins/mock_putc_plugin/: MockPutc.cpp
plugins/riscv32_cycle_count_plugin/: CMakeLists.txt  Riscv32CycleCount.cpp
plugins/riscv32_rocketchip_syscall_plugin/: CMakeLists.txt  Riscv32RocketchipSyscall.cpp
plugins/riscv64_rocketchip_syscall_plugin/: CMakeLists.txt  Riscv64RocketchipSyscall.cpp  RiscvXXRocketchipSyscall.h
plugins/riscv64_stop_emulation_plugin/: CMakeLists.txt  Riscv64StopEmulation.cpp
plugins/riscv_stop_emulation_plugin/: CMakeLists.txt  RiscvStopEmulation.cpp
plugins/shadow_memory_plugin/: CMakeLists.txt  ShadowMemory.cpp
src/: CMakeLists.txt  argparse.cpp  argparse.h  config.h  elapsedtime.h  emulator.cpp  emulator.h  hook.h  main.c  main.cpp  memdump.cpp  memdump.h  memlayout.cpp  memlayout.h  registers.h  symbols.h
src/icemu/: ArgParse.cpp  CMakeLists.txt  MemoryDump.cpp  main.cpp
src/icemu/emu/: Emulator.cpp  Memory.cpp
src/plugins/: CMakeLists.txt  README.md
src/plugins/call_count_plugin/: CallCount.cpp
src/plugins/call_frequency_plugin/: CMakeLists.txt
src/plugins/callsite_count_plugin/: CallsiteCount.cpp
src/plugins/checkpoint_marker_plugin/: CMakeLists.txt  CheckpointMarker.cpp
src/plugins/checkpoint_side_effects_plugin/: CMakeLists.txt  CheckpointSideEffects.cpp
src/plugins/checkpoint_verification_plugin/: CMakeLists.txt  CheckpointVerification.cpp
src/plugins/common/: CycleCounter.h  PluginArgumentParsing.h
src/plugins/cycle_count_plugin/: CMakeLists.txt  CycleCount.cpp  CycleCounter.h
src/plugins/display_instructions_plugin/: CMakeLists.txt  DisplayInstructions.cpp
src/plugins/final_value_plugin/: CMakeLists.txt
src/plugins/idempotency_statistics_plugin/: CMakeLists.txt  IdempotencyStatistics.cpp
src/plugins/instruction_count_main_plugin/: CMakeLists.txt  InstructionCountMain.cpp
src/plugins/instruction_profiling_plugin/: InstructionProfiling.cpp
src/plugins/intermittency_plugin/: Intermittency.cpp
src/plugins/memory_access_ratio_plugin/: CMakeLists.txt
src/plugins/mock_clockfunc_emutime_plugin/: CMakeLists.txt  MockClockfuncEmutime.cpp
src/plugins/mock_clockfunc_plugin/: MockClockfunc.cpp
src/plugins/mock_function_plugin/: MockFunction.cpp
src/plugins/mock_putc_plugin/: CMakeLists.txt  MockPutc.cpp
src/plugins/powertrace_plugin/: CMakeLists.txt  Powertrace.cpp
src/plugins/step_instructions_plugin/: StepInstructions.cpp
